--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,40 @@
+appdirs==1.4.4
 asgiref==3.3.4
+astroid==2.5.6
+behave==1.2.6
+bitarray==2.1.3
+cffi==1.14.5
+colorama==0.4.4
+distlib==0.3.2
 dj-database-url==0.5.0
-Django==3.2.3
+Django==3.2.4
+django-cors-headers==3.7.0
 django-heroku==0.3.1
-Faker==8.6.0
+django-utils-six==2.0
+djangorestframework==3.12.4
+filelock==3.0.12
 gunicorn==20.1.0
-psycopg2==2.8.6
+img2pdf==0.4.1
+isort==5.9.1
+lazy-object-proxy==1.6.0
+lxml==4.6.3
+mccabe==0.6.1
+parse==1.19.0
+parse-type==0.5.2
+pdfreader==0.1.10
+pikepdf==2.12.2
+Pillow==8.2.0
+psycopg2==2.9.1
+pycparser==2.20
+pycryptodome==3.10.1
+pylint==2.8.3
+pyPdf==1.13
+PyPDF2==1.26.0
+pytesseract==0.3.7
 python-dateutil==2.8.1
 pytz==2021.1
-six==1.16.0
 sqlparse==0.4.1
-text-unidecode==1.3
+toml==0.10.2
+virtualenv==20.4.7
 whitenoise==5.2.0
+wrapt==1.12.1
