--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asgiref==3.3.4
 astroid==2.5.6
 behave==1.2.6
 bitarray==2.1.3
+boto3==1.17.107
+botocore==1.20.107
 cffi==1.14.5
 colorama==0.4.4
 distlib==0.3.2
@@ -10,12 +12,14 @@ dj-database-url==0.5.0
 Django==3.2.4
 django-cors-headers==3.7.0
 django-heroku==0.3.1
+django-storages==1.11.1
 django-utils-six==2.0
 djangorestframework==3.12.4
 filelock==3.0.12
 gunicorn==20.1.0
 img2pdf==0.4.1
 isort==5.9.1
+jmespath==0.10.0
 lazy-object-proxy==1.6.0
 lxml==4.6.3
 mccabe==0.6.1
@@ -33,8 +37,11 @@ PyPDF2==1.26.0
 pytesseract==0.3.7
 python-dateutil==2.8.1
 pytz==2021.1
+s3transfer==0.4.2
+six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
+urllib3==1.26.6
 virtualenv==20.4.7
 whitenoise==5.2.0
 wrapt==1.12.1
