--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pyPdf==1.13
 PyPDF2==1.26.0
 pytesseract==0.3.7
 python-dateutil==2.8.1
+python-decouple==3.4
 pytz==2021.1
 s3transfer==0.4.2
 six==1.16.0
