--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,8 @@ mccabe==0.6.1
 parse==1.19.0
 parse-type==0.5.2
 pdfreader==0.1.10
-pikepdf==2.15.1
+pikepdf==2.12.2
+pyproject_toml==0.0.10
 Pillow==8.2.0
 psycopg2==2.9.1
 pycparser==2.20
