--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ parse==1.19.0
 parse-type==0.5.2
 pdfreader==0.1.10
 pikepdf==2.12.2
-pyproject_toml==0.0.10
+jmespath==0.10.0
 Pillow==8.2.0
 psycopg2==2.9.1
 pycparser==2.20
